force-app/main/default/objects/sonar__Insight__c/sonar__Insight__c.object-meta.xml
<CustomObject>
    <label>Insight</label>
    <nameField>
        <label>Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>