force-app/main/default/objects/sonar__Insight__c/fields/sonar__Field_Details__c.field-meta.xml
<CustomField>
    <fullName>sonar__Field_Details__c</fullName>
    <label>Field Details</label>
    <referenceTo>sonar__Field_Details__c</referenceTo>
    <relationshipLabel>Insights</relationshipLabel>
    <relationshipName>Insights</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>