force-app/main/default/objects/sonar__Insight__c/fields/sonar__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>sonar__Field_Value__c</fullName>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>