force-app/main/default/objects/sonar__Insight__c/fields/sonar__Populated_Frequency__c.field-meta.xml
<CustomField>
    <fullName>sonar__Populated_Frequency__c</fullName>
    <label>Populated Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>