force-app/main/default/objects/sonar__Insight__c/fields/sonar__Records_Count__c.field-meta.xml
<CustomField>
    <fullName>sonar__Records_Count__c</fullName>
    <formula>sonar__Field_Details__r.sonar__Insight_Record_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Records Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>