force-app/main/default/objects/sonar__Insight__c/listViews/sonar__All.listView-meta.xml
<ListView>
    <fullName>sonar__All</fullName>
    <columns>NAME</columns>
    <columns>sonar__Field_Value__c</columns>
    <columns>sonar__Records_Count__c</columns>
    <columns>sonar__Populated_Frequency__c</columns>
    <columns>sonar__Field_Details__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>